# qml_study

./: README.md
1_image/: CMakeLists.txt  Main.qml  main.cpp
1_image2/: CMakeLists.txt  main.cpp
1_image3/: CMakeLists.txt  main.cpp
1_image4/: CMakeLists.txt  main.cpp
1_image5/: CMakeLists.txt  main.cpp
1_start/: 1_start.qmlproject  CMakeLists.txt  main.qml  qmlmodules
1_start2/: main.cpp  main.qml
1_windmill/: CMakeLists.txt  Main.qml  main.cpp
2_ImageRotate/: main.qml
2_Text_highlight/: CMakeLists.txt  Main.qml  main.cpp
2_font/: CMakeLists.txt  Main.qml  main.cpp
2_variables/: CMakeLists.txt
2_variables2/: CMakeLists.txt  main.cpp
3_1rectangle/: CMakeLists.txt  Main.qml  main.cpp
3_2anchors/: CMakeLists.txt  main.cpp
3_QmlBasic/: main.qml
QmlStart/: main.cpp  main.qml
build-1_image-Desktop_Qt_6_8_0_64-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  app1_image  app1_image_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-1_image2-Desktop_Qt_6_8_0_64-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  app1_image2_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-1_image3-Desktop_Qt_6_8_0_64-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  app1_image3_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
build-1_image4-Desktop_Qt_6_8_0_64-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  app1_image4  app1_image4_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
build-1_image5-Desktop_Qt_6_8_0_64-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  (+4 more)
(+705 files in other folders)
